# bugfix-automation

./: .gitattributes  .gitignore  LICENSE  README.md  config.example.en.yaml  config.example.yaml  config.yaml  pyproject.toml
.codex/agents/: branch-commit-agent.toml  bug-triage-agent.toml  frontend-fix-agent.toml  verification-agent.toml
approval-web/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
approval-web/app/: globals.css  layout.tsx  page.tsx
bugfix_automation/: __init__.py  approval.py  approval_api.py  approval_server.py  bootstrap.py  capability_system.py  cli.py  codex_summary.py  config.py  constants.py  excel_reader.py  excel_writer.py  filtering.py  images.py  prompt.py  reporter.py  runner.py  scheduler.py  task_state.py  worktree.py
bugfix_automation/api/: app.py  (+2 more)
data/: app.sqlite3  app.sqlite3-shm  app.sqlite3-wal
docs/: user-manual.zh-CN.md
examples/: bugs.en.csv  bugs.en.xlsx  bugs.zh-CN.csv  bugs.zh-CN.xlsx
prompts/: excel_adapter.md  fix_backend.md  fix_frontend.md  fix_fullstack.md  optimize.md  rework.md  summary.md
scripts/: dev.ps1  dev.sh
tests/: test_ai_log_storage.py  test_approval.py  test_approval_server.py  test_codex_summary.py  test_config.py  test_excel_adapter_service.py  test_excel_reader.py  test_excel_storage.py  test_fastapi_api.py  test_filtering_prompt_report.py  test_fix_validation_service.py  test_git_metadata.py  test_images.py  test_integration_service.py  test_online_sheet_service.py  test_run_selection.py  test_scheduler.py  test_services.py  test_storage.py  test_worktree.py
(+141 files in other folders)
